[gd_scene load_steps=13 format=3 uid="uid://cftiftdwtafru"]

[ext_resource type="Script" uid="uid://x6a4v32tkkl3" path="res://scripts/OptionsMenu.gd" id="1_23v2r"]
[ext_resource type="PackedScene" uid="uid://dujvktpkrb4ot" path="res://scenes/main/SettingsMenu/GraphicPage.tscn" id="2_6hvfi"]
[ext_resource type="Texture2D" uid="uid://c16eynox5i83k" path="res://sprites/ui/settings_background2.png" id="2_c467w"]
[ext_resource type="PackedScene" uid="uid://dfqcgcy1caatn" path="res://scenes/main/SettingsMenu/AudioPage.tscn" id="3_ndnd1"]
[ext_resource type="Texture2D" uid="uid://cp66emtcc6663" path="res://sprites/ui/icon_sound1.png" id="5_6hvfi"]
[ext_resource type="PackedScene" uid="uid://ct4ob13uj6aeq" path="res://scenes/main/SettingsMenu/SavePage.tscn" id="5_c467w"]
[ext_resource type="Texture2D" uid="uid://dre6213l4q6nc" path="res://sprites/ui/icon_sound2.png" id="6_1vjsu"]
[ext_resource type="Texture2D" uid="uid://cxn51pvf4d45g" path="res://sprites/ui/icon_resolution1.png" id="7_a1sux"]
[ext_resource type="Texture2D" uid="uid://caonb1y8jpoco" path="res://sprites/ui/icon_resolution2.png" id="8_rr0t0"]
[ext_resource type="Texture2D" uid="uid://dsk8046kdnee0" path="res://sprites/ui/icon_save1.png" id="9_hu5gw"]
[ext_resource type="Texture2D" uid="uid://njjm4644ilym" path="res://sprites/ui/icon_save2.png" id="10_nlqbe"]
[ext_resource type="Texture2D" uid="uid://nyda32ku15iu" path="res://sprites/ui/icon_exit.png" id="11_6r5mj"]

[node name="OptionsMenu" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(690, 550)
visible = true
wrap_controls = false
script = ExtResource("1_23v2r")

[node name="ContentRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 686.0
offset_bottom = 546.0
mouse_filter = 2

[node name="Background" type="TextureRect" parent="ContentRoot"]
texture_filter = 1
layout_mode = 0
offset_left = -15.0
offset_top = 1.0
offset_right = 667.0
offset_bottom = 543.0
texture = ExtResource("2_c467w")
stretch_mode = 5

[node name="GraphicPage" parent="ContentRoot" instance=ExtResource("2_6hvfi")]
visible = false
z_index = 1
layout_mode = 1
offset_right = -6.1035156e-05

[node name="SavePage" parent="ContentRoot" instance=ExtResource("5_c467w")]
visible = false
z_index = 1
layout_mode = 0
offset_right = 689.0
offset_bottom = 542.0

[node name="AudioTab" parent="ContentRoot" instance=ExtResource("3_ndnd1")]
visible = false
z_index = 1
layout_mode = 0
offset_right = 689.0
offset_bottom = 542.0
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="TabsContainer" type="VBoxContainer" parent="ContentRoot"]
layout_direction = 3
layout_mode = 0
offset_left = 10.0
offset_top = 103.0
offset_right = 106.0
offset_bottom = 397.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = -30

[node name="TabButtonSound" type="TextureButton" parent="ContentRoot/TabsContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_6hvfi")
texture_pressed = ExtResource("6_1vjsu")

[node name="TabButtonScreen" type="TextureButton" parent="ContentRoot/TabsContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_a1sux")
texture_pressed = ExtResource("8_rr0t0")

[node name="TabButtonSave" type="TextureButton" parent="ContentRoot/TabsContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_hu5gw")
texture_pressed = ExtResource("10_nlqbe")

[node name="TabButtonExit" type="TextureButton" parent="ContentRoot/TabsContainer"]
layout_mode = 2
texture_normal = ExtResource("11_6r5mj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContentRoot"]
root_node = NodePath("../..")

[node name="PopupConfirmExit" type="PopupPanel" parent="ContentRoot"]
oversampling_override = 1.0
initial_position = 1

[connection signal="pressed" from="ContentRoot/TabsContainer/TabButtonExit" to="." method="_on_exit_button_pressed"]
